--- a/gb/19/7/2/n11360070.md
+++ b/gb/19/7/2/n11360070.md
@@ -1,54 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfgt5/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/asdfgt5/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/asdfgt5/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>µ±ÉæºÚ±£»¤É¡ ¹þ¶û±õºôÀ¼ÇøÔ­Êé¼ÇÇø³¤±»²é</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/zufei-Web-Banner-1200x800-v1-600x400.jpg" />
-<h6>ÖÐ¹²¹þ¶û±õÊÐºôÀ¼ÇøÔ­ÇøÎ¯Êé¼ÇÖì»ÔÈÕÇ°±»²é¡££¨´ó¼ÍÔªºÏ³É£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/nsxsof363/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å½“æ¶‰é»‘ä¿æŠ¤ä¼ž å“ˆå°”æ»¨å‘¼å…°åŒºåŽŸä¹¦è®°åŒºé•¿è¢«æŸ¥</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/zufei-Web-Banner-1200x800-v1-600x400.jpg" />
+<h6>ä¸­å…±å“ˆå°”æ»¨å¸‚å‘¼å…°åŒºåŽŸåŒºå§”ä¹¦è®°æœ±è¾‰æ—¥å‰è¢«æŸ¥ã€‚ï¼ˆå¤§çºªå…ƒåˆæˆï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ02ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß×¯ÕýÃ÷±¨µ¼£©ÖÐ¹²ºÚÁú½­Ê¡<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E5%93%88%E5%B0%94%E6%BB%A8.md">¹þ¶û±õ</a>ÊÐ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E5%91%BC%E5%85%B0%E5%8C%BA.md">ºôÀ¼Çø</a>Ô­ÇøÎ¯Êé¼Ç<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%9C%B1%E8%BE%89.md">Öì»Ô</a>¡¢Ô­Çø³¤<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E4%BA%8E%E4%BC%A0%E5%8B%87.md">ÓÚ´«ÓÂ</a>£¨¾ùÎªÕý¾Ö¼¶£©ÈÕÇ°ÂäÂí¡£¶þÊ®¶àÌìÀ´£¬°üÀ¨Öì»Ô¡¢ÓÚ´«ÓÂÔÚÄÚ£¬ÒÑÓÐ14ÃûÔøÔÚºôÀ¼ÇøÈÎÖ°µÄ¹ÙÔ±¶¼Òò³äµ±ÉæºÚ¡°<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E4%BF%9D%E6%8A%A4%E4%BC%9E.md">±£»¤É¡</a>¡±±»²é¡£</p>
-<p>ÖÐ¼ÍÎ¯¹ÙÍø6ÔÂ30ÈÕ¡¢7ÔÂ2ÈÕ·Ö±ðÍ¨±¨ÁË<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%9C%B1%E8%BE%89.md">Öì»Ô</a>¡¢<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E4%BA%8E%E4%BC%A0%E5%8B%87.md">ÓÚ´«ÓÂ</a>Òò¡°ÉæÏÓÑÏÖØÎ¥¼ÍÎ¥·¨¡±¡¢²¢ÎªºÚÉç»áÐÔÖÊ×éÖ¯³äµ±¡°<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E4%BF%9D%E6%8A%A4%E4%BC%9E.md">±£»¤É¡</a>¡±¶ø±»²éµÄÏûÏ¢¡£</p>
-<p>ÏÖÄê57ËêµÄÖì»ÔÔøÈÎ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E5%93%88%E5%B0%94%E6%BB%A8.md">¹þ¶û±õ</a>Ë«³ÇÊÐ¸±ÊÐ³¤¡¢Ä¾À¼ÏØÎ¯Êé¼ÇµÈÖ°£»2011Äê8ÔÂÈÎ¹þ¶û±õÊÐ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E5%91%BC%E5%85%B0%E5%8C%BA.md">ºôÀ¼Çø</a>Î¯¸±Êé¼Ç¡¢Çø³¤£»2015Äê1ÔÂÖÁ2017Äê12ÔÂÈÎºôÀ¼ÇøÇøÎ¯Êé¼Ç£»´ËºóÈÎºôÀ¼ÇøÎ¯Õý¾Ö¼¶¸É²¿ÖÁÂäÂí¡£</p>
-<p>ÏÖÄê46ËêµÄÓÚ´«ÓÂÔøÈÎ¹²ÇàÍÅ¹þ¶û±õÊÐÎ¯¸±Êé¼Ç¡¢¹þ¶û±õÊÐ³ÇÊÐ¹ÜÀíÐÐÕþÖ´·¨¾Ö¾Ö³¤µÈÖ°¡£2015Äê1ÔÂµ÷ÈÎºôÀ¼ÇøÎ¯¸±Êé¼Ç¡¢Çø³¤£¬³ÉÎªÊ±ÈÎºôÀ¼ÇøÇøÎ¯Êé¼ÇÖì»ÔµÄ´îµµÖÁ2017Äê12ÔÂ£¬Ö®ºóÒ²ÓëÖì»ÔÒ»Ñù³öÈÎºôÀ¼ÇøÕý¾Ö¼¶¸É²¿¡£</p>
-<p>6ÔÂ10ÈÕÒÔÀ´£¬³ýÁËÖì»Ô¡¢ÓÚ´«ÓÂ£¬ÖÁÉÙ»¹ÓÐ12ÃûºôÀ¼ÇøµÄÏÖÈÎºÍÇ°ÈÎ¹ÙÔ±Òò³äµ±ÉæºÚ×éÖ¯¡°±£»¤É¡¡±µÈ±»²é¡£ÆäÖÐ¶àÈËÔøÊÇÖì»Ô¡¢ÓÚ´«ÓÂµÄÏÂÊô¡£</p>
-<p>6ÔÂ18ÈÕ£¬¹þ¶û±õÊÐ×ÔÈ»×ÊÔ´ºÍ¹æ»®¾ÖÑ²ÊÓÔ±¸ßÑÒÂäÂí¡£¸ßÑÒÔøÓÚ2006Äê12ÔÂÖÁ2011Äê9ÔÂ£¬µ£ÈÎ¹þ¶û±õºôÀ¼Çø¸±Çø³¤½ü5Äê¡£</p>
-<p>6ÔÂ16ÈÕ£¬¹þ¶û±õÊÐºôÀ¼ÇøÔ­»·±£¾Ö¾Ö³¤ÕÅÊç»ª£¬ºôÀ¼ÇøÉúÌ¬»·¾³¾Ö¸±¾Ö³¤Îäºì¹â£¬ºôÀ¼Çø½¨Éè¹ÜÀí¾ÖÔ­µ³Î¯Êé¼Ç¡¢¾Ö³¤ÍõÃ÷½Ü£¬ºÍ¹þ¶û±õÊÐÔ­»·¾³±£»¤¾ÖºôÀ¼·Ö¾Ö¾Ö³¤·®´óÓÂ±»²é¡£</p>
-<p>6ÔÂ15ÈÕ£¬ÖÐ¹²¹ú¼ÒË°Îñ×Ü¾Ö¹þ¶û±õÊÐË°Îñ¾ÖµÚ¶þ»ü²é¾ÖÖ´ÐÐ¿Æ¿Æ³¤ºîÁ¢¾ý£¬ºÍºôÀ¼Çø¹úÍÁ×ÊÔ´¾ÖÔ­¾Ö³¤ºîÓñ±»²é¡£ºîÁ¢¾ýÓÚ2011Äê5ÔÂÖÁ2018Äê7ÔÂÔøÈÎºôÀ¼ÇøµØ·½Ë°Îñ¾Ö»ü²é¿Æ¿Æ³¤¡£</p>
-<p>6ÔÂ13ÈÕ£¬ºôÀ¼ÇøÕþÐ­Ç°Ö÷Ï¯ËïÉÜÎÄ±»²é¡£ËïÉÜÎÄÔøÓÚ2006Äê12ÔÂÖÁ2011Äê9ÔÂ£¬ÏÈºóµ£ÈÎºôÀ¼ÇøÕþ¸®¸±Çø³¤¡¢ÇøÎ¯³£Î¯µÈÖ°£¬2012Äê12ÔÂÖÁ2018Äê8ÔÂÈÎ¹þ¶û±õÊÐºôÀ¼ÇøÕþÐ­µ³×éÊé¼Ç¡¢ÕþÐ­Ö÷Ï¯¡£</p>
-<p>6ÔÂ10ÈÕ£¬ºôÀ¼Çø¸±Çø³¤Áõ¶«£¬ºôÀ¼ÇøÑü±¤½Ö¹¤Î¯¸±Êé¼Ç¡¢°ìÊÂ´¦Ö÷ÈÎºúÊ÷ºÓ£¬ºôÀ¼Çø¹úÍÁ×ÊÔ´¾Ö¸±¾Ö³¤Íõºé¾ü£¬ºôÀ¼Çø×¡·¿ºÍ³ÇÏç½¨Éè¾Öµ÷ÑÐÔ±ÖìÌÎµÈ4ÈËÂäÂí¡£</p>
-<p>ÖÐ¹²ÖÎÏÂ¡°¹Ù·ËÒ»¼Ò¡±¡¢¡°¾¯·ËÒ»¼Ò¡±µÄÏÖÏóÂÅ¼û²»ÏÊ¡£½ñÄêÒÔÀ´£¬³ýÁËÉÏÊöµÄºôÀ¼Çø£¬´óÂ½¶àµØÒ²³öÏÖ¶àÆðÉæºÚ¡°±£»¤É¡¡±ÎÑ°¸¡£Èç½ñÄê4ÔÂ¼ªÁÖÊ¡³¤´ºÍ¨±¨ÁËÒ»Æð°ïÖúÁõÁ¢¾üÉæºÚ·¸×ïÍÅ»ïÌÓ±Ü·¨ÂÉÖÆ²ÃµÄÎÑ°¸£¬°üÀ¨ÓÜÊ÷ÊÐÇ°ÊÐÎ¯³£Î¯¡¢³£Îñ¸±ÊÐ³¤ÕÔ¹ú¾ü£¬ÊÐ¹«°²¾ÖÇ°¸±¾Ö³¤Àî½¨¹ú£¬ÊÐ¼ì²ìÔº¼ìÎñ¹ÜÀí²¿Ç°¸±²¿³¤½ðöÎ£¬ÊÐ·¨ÔºÉóÅÐÎ¯Ô±»áÇ°Î¯Ô±¡¢ÃñÉÌÊÂÉóÅÐµÚ¶þÍ¥Ô­Í¥³¤ÓÚ¾üÎ°µÈ¶àÉæ°¸¡£#</p>
-<p>ÔðÈÎ±à¼­£ºËïÜ¿</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ02æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…åº„æ­£æ˜ŽæŠ¥å¯¼ï¼‰ä¸­å…±é»‘é¾™æ±Ÿçœ<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E5%93%88%E5%B0%94%E6%BB%A8.md#1">å“ˆå°”æ»¨</a>å¸‚<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E5%91%BC%E5%85%B0%E5%8C%BA.md#1">å‘¼å…°åŒº</a>åŽŸåŒºå§”ä¹¦è®°<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%B1%E8%BE%89.md#1">æœ±è¾‰</a>ã€åŽŸåŒºé•¿<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%BA%8E%E4%BC%A0%E5%8B%87.md#1">äºŽä¼ å‹‡</a>ï¼ˆå‡ä¸ºæ­£å±€çº§ï¼‰æ—¥å‰è½é©¬ã€‚äºŒåå¤šå¤©æ¥ï¼ŒåŒ…æ‹¬æœ±è¾‰ã€äºŽä¼ å‹‡åœ¨å†…ï¼Œå·²æœ‰14åæ›¾åœ¨å‘¼å…°åŒºä»»èŒçš„å®˜å‘˜éƒ½å› å……å½“æ¶‰é»‘â€œ<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%BF%9D%E6%8A%A4%E4%BC%9E.md#1">ä¿æŠ¤ä¼ž</a>â€è¢«æŸ¥ã€‚</p>
+<p>ä¸­çºªå§”å®˜ç½‘6æœˆ30æ—¥ã€7æœˆ2æ—¥åˆ†åˆ«é€šæŠ¥äº†<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%B1%E8%BE%89.md#1">æœ±è¾‰</a>ã€<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%BA%8E%E4%BC%A0%E5%8B%87.md#1">äºŽä¼ å‹‡</a>å› â€œæ¶‰å«Œä¸¥é‡è¿çºªè¿æ³•â€ã€å¹¶ä¸ºé»‘ç¤¾ä¼šæ€§è´¨ç»„ç»‡å……å½“â€œ<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%BF%9D%E6%8A%A4%E4%BC%9E.md#1">ä¿æŠ¤ä¼ž</a>â€è€Œè¢«æŸ¥çš„æ¶ˆæ¯ã€‚</p>
+<p>çŽ°å¹´57å²çš„æœ±è¾‰æ›¾ä»»<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E5%93%88%E5%B0%94%E6%BB%A8.md#1">å“ˆå°”æ»¨</a>åŒåŸŽå¸‚å‰¯å¸‚é•¿ã€æœ¨å…°åŽ¿å§”ä¹¦è®°ç­‰èŒï¼›2011å¹´8æœˆä»»å“ˆå°”æ»¨å¸‚<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E5%91%BC%E5%85%B0%E5%8C%BA.md#1">å‘¼å…°åŒº</a>å§”å‰¯ä¹¦è®°ã€åŒºé•¿ï¼›2015å¹´1æœˆè‡³2017å¹´12æœˆä»»å‘¼å…°åŒºåŒºå§”ä¹¦è®°ï¼›æ­¤åŽä»»å‘¼å…°åŒºå§”æ­£å±€çº§å¹²éƒ¨è‡³è½é©¬ã€‚</p>
+<p>çŽ°å¹´46å²çš„äºŽä¼ å‹‡æ›¾ä»»å…±é’å›¢å“ˆå°”æ»¨å¸‚å§”å‰¯ä¹¦è®°ã€å“ˆå°”æ»¨å¸‚åŸŽå¸‚ç®¡ç†è¡Œæ”¿æ‰§æ³•å±€å±€é•¿ç­‰èŒã€‚2015å¹´1æœˆè°ƒä»»å‘¼å…°åŒºå§”å‰¯ä¹¦è®°ã€åŒºé•¿ï¼Œæˆä¸ºæ—¶ä»»å‘¼å…°åŒºåŒºå§”ä¹¦è®°æœ±è¾‰çš„æ­æ¡£è‡³2017å¹´12æœˆï¼Œä¹‹åŽä¹Ÿä¸Žæœ±è¾‰ä¸€æ ·å‡ºä»»å‘¼å…°åŒºæ­£å±€çº§å¹²éƒ¨ã€‚</p>
+<p>6æœˆ10æ—¥ä»¥æ¥ï¼Œé™¤äº†æœ±è¾‰ã€äºŽä¼ å‹‡ï¼Œè‡³å°‘è¿˜æœ‰12åå‘¼å…°åŒºçš„çŽ°ä»»å’Œå‰ä»»å®˜å‘˜å› å……å½“æ¶‰é»‘ç»„ç»‡â€œä¿æŠ¤ä¼žâ€ç­‰è¢«æŸ¥ã€‚å…¶ä¸­å¤šäººæ›¾æ˜¯æœ±è¾‰ã€äºŽä¼ å‹‡çš„ä¸‹å±žã€‚</p>
+<p>6æœˆ18æ—¥ï¼Œå“ˆå°”æ»¨å¸‚è‡ªç„¶èµ„æºå’Œè§„åˆ’å±€å·¡è§†å‘˜é«˜å²©è½é©¬ã€‚é«˜å²©æ›¾äºŽ2006å¹´12æœˆè‡³2011å¹´9æœˆï¼Œæ‹…ä»»å“ˆå°”æ»¨å‘¼å…°åŒºå‰¯åŒºé•¿è¿‘5å¹´ã€‚</p>
+<p>6æœˆ16æ—¥ï¼Œå“ˆå°”æ»¨å¸‚å‘¼å…°åŒºåŽŸçŽ¯ä¿å±€å±€é•¿å¼ æ·‘åŽï¼Œå‘¼å…°åŒºç”Ÿæ€çŽ¯å¢ƒå±€å‰¯å±€é•¿æ­¦çº¢å…‰ï¼Œå‘¼å…°åŒºå»ºè®¾ç®¡ç†å±€åŽŸå…šå§”ä¹¦è®°ã€å±€é•¿çŽ‹æ˜Žæ°ï¼Œå’Œå“ˆå°”æ»¨å¸‚åŽŸçŽ¯å¢ƒä¿æŠ¤å±€å‘¼å…°åˆ†å±€å±€é•¿æ¨Šå¤§å‹‡è¢«æŸ¥ã€‚</p>
+<p>6æœˆ15æ—¥ï¼Œä¸­å…±å›½å®¶ç¨ŽåŠ¡æ€»å±€å“ˆå°”æ»¨å¸‚ç¨ŽåŠ¡å±€ç¬¬äºŒç¨½æŸ¥å±€æ‰§è¡Œç§‘ç§‘é•¿ä¾¯ç«‹å›ï¼Œå’Œå‘¼å…°åŒºå›½åœŸèµ„æºå±€åŽŸå±€é•¿ä¾¯çŽ‰è¢«æŸ¥ã€‚ä¾¯ç«‹å›äºŽ2011å¹´5æœˆè‡³2018å¹´7æœˆæ›¾ä»»å‘¼å…°åŒºåœ°æ–¹ç¨ŽåŠ¡å±€ç¨½æŸ¥ç§‘ç§‘é•¿ã€‚</p>
+<p>6æœˆ13æ—¥ï¼Œå‘¼å…°åŒºæ”¿åå‰ä¸»å¸­å­™ç»æ–‡è¢«æŸ¥ã€‚å­™ç»æ–‡æ›¾äºŽ2006å¹´12æœˆè‡³2011å¹´9æœˆï¼Œå…ˆåŽæ‹…ä»»å‘¼å…°åŒºæ”¿åºœå‰¯åŒºé•¿ã€åŒºå§”å¸¸å§”ç­‰èŒï¼Œ2012å¹´12æœˆè‡³2018å¹´8æœˆä»»å“ˆå°”æ»¨å¸‚å‘¼å…°åŒºæ”¿åå…šç»„ä¹¦è®°ã€æ”¿åä¸»å¸­ã€‚</p>
+<p>6æœˆ10æ—¥ï¼Œå‘¼å…°åŒºå‰¯åŒºé•¿åˆ˜ä¸œï¼Œå‘¼å…°åŒºè…°å ¡è¡—å·¥å§”å‰¯ä¹¦è®°ã€åŠžäº‹å¤„ä¸»ä»»èƒ¡æ ‘æ²³ï¼Œå‘¼å…°åŒºå›½åœŸèµ„æºå±€å‰¯å±€é•¿çŽ‹æ´ªå†›ï¼Œå‘¼å…°åŒºä½æˆ¿å’ŒåŸŽä¹¡å»ºè®¾å±€è°ƒç ”å‘˜æœ±æ¶›ç­‰4äººè½é©¬ã€‚</p>
+<p>ä¸­å…±æ²»ä¸‹â€œå®˜åŒªä¸€å®¶â€ã€â€œè­¦åŒªä¸€å®¶â€çš„çŽ°è±¡å±¡è§ä¸é²œã€‚ä»Šå¹´ä»¥æ¥ï¼Œé™¤äº†ä¸Šè¿°çš„å‘¼å…°åŒºï¼Œå¤§é™†å¤šåœ°ä¹Ÿå‡ºçŽ°å¤šèµ·æ¶‰é»‘â€œä¿æŠ¤ä¼žâ€çªæ¡ˆã€‚å¦‚ä»Šå¹´4æœˆå‰æž—çœé•¿æ˜¥é€šæŠ¥äº†ä¸€èµ·å¸®åŠ©åˆ˜ç«‹å†›æ¶‰é»‘çŠ¯ç½ªå›¢ä¼™é€ƒé¿æ³•å¾‹åˆ¶è£çš„çªæ¡ˆï¼ŒåŒ…æ‹¬æ¦†æ ‘å¸‚å‰å¸‚å§”å¸¸å§”ã€å¸¸åŠ¡å‰¯å¸‚é•¿èµµå›½å†›ï¼Œå¸‚å…¬å®‰å±€å‰å‰¯å±€é•¿æŽå»ºå›½ï¼Œå¸‚æ£€å¯Ÿé™¢æ£€åŠ¡ç®¡ç†éƒ¨å‰å‰¯éƒ¨é•¿é‡‘é‘«ï¼Œå¸‚æ³•é™¢å®¡åˆ¤å§”å‘˜ä¼šå‰å§”å‘˜ã€æ°‘å•†äº‹å®¡åˆ¤ç¬¬äºŒåº­åŽŸåº­é•¿äºŽå†›ä¼Ÿç­‰å¤šæ¶‰æ¡ˆã€‚#</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå­™èŠ¸</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/2/n11360070.htm">µ±ÉæºÚ±£»¤É¡ ¹þ¶û±õºôÀ¼ÇøÔ­Êé¼ÇÇø³¤±»²é</a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11283492.htm">³äµ±»Æ¶Ä±£»¤É¡ Îä²ý¹«°²·Ö¾ÖÇ°¾Ö³¤±»Ë«¿ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/5/n10956152.htm">ÆëÆë¹þ¶ûÕþ·¨Î¯¸±Êé¼ÇÔøµ±Éæ»ÆÍÅ»ï±£»¤É¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/12/n10556977.htm">ÖÐ¹²´ó¹æÄ£¸¯°Ü ¹þ¶û±õ½»Í¨ÎÑ°¸251ÈË±»²é</a></li>
-> <li><a href="https://github.com/asdfgt5/djy/blob/master/gb/19/2/4/n11024161.md">ÉæºÚ¶ñÊÆÁ¦ º¼ÖÝ¹«°²¾ÖÇ°¸±Êé¼ÇµÈ11ÈË±»²é</a></li>
-> <li><a href="https://github.com/asdfgt5/djy/blob/master/gb/19/6/5/n11302598.md">µ±ºÚ¶ñÊÆÁ¦±£»¤É¡ ´óÀíÁ½¹«°²¸±¾Ö³¤±»Ë«¿ª</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11544233.htm">¡¾Ö±²¥ÖÐ¡¿9.28¼¯»á£º·´¿¹ÍþÈ¨ Ó­½ÓÀèÃ÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11551223.htm">¡¾ÐÂÎÅ¿´µã¡¿Áõº×µÄÏ°ÌØÊ¹Éí·Ý²ØºÎÐþ»ú£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11551310.htm">»ªÎª·¢ÐÐ60ÒÚÕ®È¯ ÈÎÕý·Ç¾¹¡°ÃÉÔÚ¹ÄÀï¡±£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11551088.htm">¸Û¸®ÊÕ»Ø784·ùË½ÈËÍÁµØ ÉæÏã¸Û´óµØ²úÉÌ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/9/3/n4519621.htm">½ñÉúÔâÍ¬ÁÅÅÅ¼· Ô­À´ÊÇÆß°ÙÄêÇ°Ç·µÄÕ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539138.htm">¡¾ÎÄÊ·¡¿ÒÔÖÇ»ÛÏÍµÂÓ®µÃ×ðÖØµÄÃÀÈË·®¼§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539196.htm">¾ÐÁôËùÀïµÄÏÖÊµ°æÁÄÕ« ·ËÒÄËùË¼È´¾ø¶ÔÕæÊµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11534314.htm">ÌÆ³¯ÊéÉúÂÅÊÔ²»ÖÐ ¸ßÉ®¸æÖªËÄ´óÌõ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11548856.htm">¡¾ÐÂÎÅ¿´µã¡¿Ê®Ò»ÖÁ ±±¾©ÊÇ´óÇì»¹ÊÇ´óÄÑ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11547317.htm">°²°îÇ°¶­ÊÂ³¤ÎâÐ¡êÍ±»ÖÐ¹²Ã»ÊÕ½üÇ§ÒÚ×Ê²ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546931.htm">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²È±Ç® Óû¶áÈ¡¸»ºÀ²Æ²ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11545826.htm">¡¾Ê®×ÖÂ·¿Ú¡¿8.31¿ÖÏ®½«ÂúÔÂ ÒÉÔÆÎ´½â£¨1£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11549383.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ê×³¡¶Ô»°»á ÁÖÖ£±Ü´ð¼âÈñÎÊÌâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11547040.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ïã¸ÛÖ®¸è³öÊÖÓï°æ£¡¸ÛÈË°ÙÈÕÐûÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11541692.htm">ÖúÕóÁÖº£·åÑÝ³ª»á »ÆÇïÉú×à¡¶Ô¸ÈÙ¹â¹éÏã¸Û¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11551445.htm">·¶Ø©Ø©Ê×Ì¸³öÉúÏ¸½Ú ÆÆ·¶±ù±ùË½Éú×Ó´«ÎÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11547898.htm">²ÌÊ«Ü¿»³ÔÐÁË£¡ÓëÍõÑôÃ÷ÌðÉ¹ÔÐÕÕ ·ÖÏíÏ²ÔÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546599.htm">¹ÅÌìÀÖÊÎº··Ë½ÙÖé±¦ÐÐ ÄÖÊÐÇ¹Õ½Ï·ÒýÂ·ÈË¿Ö»Å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11548085.htm">¡¶´óÊ±´ú¡··ç¹âÏÂµµ ¡¶¶àÇé³ÇÊÐ¡·Ê×²¥¿ªºìÅÌ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/7/12/n10556977.md#1">ä¸­å…±å¤§è§„æ¨¡è…è´¥ å“ˆå°”æ»¨äº¤é€šçªæ¡ˆ251äººè¢«æŸ¥</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10956152.md#1">é½é½å“ˆå°”æ”¿æ³•å§”å‰¯ä¹¦è®°æ›¾å½“æ¶‰é»„å›¢ä¼™ä¿æŠ¤ä¼ž</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/5/27/n11283492.md#1">å……å½“é»„èµŒä¿æŠ¤ä¼ž æ­¦æ˜Œå…¬å®‰åˆ†å±€å‰å±€é•¿è¢«åŒå¼€</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485723.md#1">é•¿å²›åƒè¾†è½¦ç™¾è‹±é‡Œå¤§æ¸¸è¡ŒæŒºå·æ™®</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfgt5/djy/blob/master/gb/19/7/2/n11360070.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/asdfgt5/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/asdfgt5/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/asdfgt5/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">æž—è¾‰ï¼šå…­ä¸ƒé¦™æ¸¯çº¢æ½® æ–°åŽç¤¾åˆ†ç¤¾å‘åŠ¨è èæˆ˜</a></li><li><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#1" target="_blank">ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">æ„Ÿæ©èŠ‚ æ³•è½®å¤§æ³•å¼Ÿå­æ„Ÿå¿µå¸ˆæ©</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474369.md#1">æ—¥æœ¬å‡ºçŽ°â€œUFOç©ºæˆ˜â€ç”»é¢ å¤šä¸ªè¿½èµ¶ä¸€ä¸ª</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">æ›¾é¢„è¨€å·æ™®å½“é€‰ ä¼ æ•™å£«ï¼šä¸Šå¸æ´¾å¤©ä½¿åŠ©è¿žä»»</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/30/n12440550.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢1</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/3/n12378281.md#1">ã€è¥¿å®‰äº‹å˜?è’‹å®‹å¤«å¦‡ã€‘å¤©é™ç¥žè°• ä½¿å‘½ä¹‹è¡Œ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/26/n12433135.md#1">æµŽå…¬è¢ˆè£Ÿç½©å±± å¤äº•è¿æœ¨</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482835.md#1">ã€åå­—è·¯å£ã€‘æ‹œç™»å®¶å†çˆ†é€šå…±é—¨ ä¸­å…±æ¸—é€è”åˆå›½</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482472.md#1">ã€æ‹æ¡ˆæƒŠå¥‡ã€‘æ‹œç™»å®¶æ—é€šå…±ï¼Ÿä¹ ä¸ºä½•çªç„¶å›žäº¬</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">ã€çè¨€çœŸè¯­ã€‘æ¡‘æ™®ï¼šä¹ è¿‘å¹³å—å·¡ ä¸Šæ¼”éšœçœ¼æ³•</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481651.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ä¹ çªè¿”äº¬æˆ–3åŽŸå›  æ‹œç™»å®¶ä¸‘é—»è¿žçˆ†</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">èµµç«‹åšè¯¬è”‘ç¾Žå†›æ’­æ¯’è®ºä»¤å·æ™®æ„¤æ€’è‡³æž</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">å¤§é™†äºŒæ‰‹æˆ¿å¸‚åœºåˆ†åŒ–ä¸¥é‡ æˆ¿åœ°äº§æ³¡æ²«è¦ç ´ï¼Ÿ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481456.md#1">åˆ˜è¯—è¯—è‡ªæ›ä¸æ„¿ä¸Šç»¼è‰º ä¸ªä¸­åŽŸå› ä»¤äººåƒæƒŠ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481895.md#1">ä¼ å‘¨æ˜Ÿé©°é‡é‡‘ç»­çº¦æž—å… ä¸ºå¯¹èµŒåè®®æ·»ä¿éšœ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12479366.md#1">ç« å­æ€¡å½“è£ç¼å‰ªTæ¤ äº²è‡ªç§€æ¨¡ç‰¹å„å¼ç©¿æ­</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICEå®šå»¶å¿ƒç†ä¸å®‰ æš‚ä¸å‚ä¸Žæ­£è§„äºŒè¾‘ç­‰æ´»åŠ¨</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484792.md#1">æ´ªé‡‘å®æ‹„æ‹æ–è¿‘ç…§æ›å…‰ ç½‘æ°‘æƒŠè®¶</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480422.md#1">å®ç‰¹ç“¶å½“æ°´å£¶ 10å²å¥³ç«¥çš®è‚¤æµæ±¤ã€æœˆç»ææ—©æ¥</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">æ›¾é¢„è¨€å·æ™®å½“é€‰ ä¼ æ•™å£«ï¼šä¸Šå¸æ´¾å¤©ä½¿åŠ©è¿žä»»</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481545.md#1">è‡ªåˆ¶3æ¯å¤©ç„¶è¿åŠ¨é¥®æ–™ æå‡å…ç–«åŠ›ã€æ”¹å–„ç–²åŠ³</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480185.md#1">11å¤©è¿žé£ž1.2ä¸‡å…¬é‡Œ å‡ ç™¾å…‹é‡å°é¸Ÿåˆ›ä¸–ç•Œçºªå½•</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481202.md#1">æ¢å­£æµé¼»æ°´ã€çš®è‚¤ç—’ï¼Ÿè¿‡æ•è‡ªæ•‘æœ‰ä¸€å¥—</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/2/n11360070.htm">å½“æ¶‰é»‘ä¿æŠ¤ä¼ž å“ˆå°”æ»¨å‘¼å…°åŒºåŽŸä¹¦è®°åŒºé•¿è¢«æŸ¥</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nsxsof363/djy/blob/master/gb/19/7/2/n11360070.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
